--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     concurrency:
-      group: build
+      group: build-${{ github.ref }}
       cancel-in-progress: true
     env:
       REGISTRY: ghcr.io
