--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
       "automerge": true,
       "automergeStrategy": "rebase",
       "automergeType": "pr",
-      "automergeSchedule": ["* 4 * * 6"],
+      "automergeSchedule": ["* 4-15 * * 6"],
       "platformAutomerge": false,
     }
   ]
